Fixed the background image not showing.

--- a/css/main.css
+++ b/css/main.css
@@ -5,5 +5,6 @@
 	box-shadow: 0 0 1000px 1000px rgba(0, 0, 0, 0.25);
 }
 body{
-	background-image: url("./images/background.jpg");
+	background-image: url("../images/background.jpg");
+	background-size: 100%;
 }
